--- a/ol-archive/dotnet/docs.it-it/master/dotnet-core/index.71dad99a3d8a9a5457c33f8b214681ce0bb0e302.it-it.xlf
+++ b/ol-archive/dotnet/docs.it-it/master/dotnet-core/index.71dad99a3d8a9a5457c33f8b214681ce0bb0e302.it-it.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="it-it">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1829b32f1a5f92c5ee065c3107750621681ac82c</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-b5c25fc" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1de77c477425c9e1ee17125a3980306271c0ddc7</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tutorials\index.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">8381258f294e1a100d84ad038b745eb2ee3f4ffb</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">39fb6d058a4e6bf2564a53780aeed0db54ef4851</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">97d51e0deeefe1c8301c4e1a491c01018f5628d8</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">0ec00c495c2c51e008a57bd54f2a7d64bd66a16f</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,26 +28,65 @@
           <source>The following tutorials are available for learning about .NET Core.</source>
           <target state="translated">Le esercitazioni seguenti includono informazioni e istruzioni sull'uso di .NET Core.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source><bpt id="p1">[</bpt>Getting started with .NET Core on Windows<ept id="p1">](using-on-windows.md)</ept></source>
-          <target state="translated"><bpt id="p1">[</bpt>Introduzione a .NET Core su Windows<ept id="p1">](using-on-windows.md)</ept></target>       </trans-unit>
+          <source>Building applications with Visual Studio 2017</source>
+          <target state="translated">Creazione di applicazioni con Visual Studio 2017</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[</bpt>Building a C# Hello World application<ept id="p1">](../../csharp/getting-started/with-visual-studio-2017.md)</ept></source>
+          <target state="translated"><bpt id="p1">[</bpt>Creazione di un'applicazione C# denominata Hello World<ept id="p1">](../../csharp/getting-started/with-visual-studio-2017.md)</ept></target>       </trans-unit>
+        <trans-unit id="108" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[</bpt>Debugging your C# Hello World application<ept id="p1">](../../csharp/getting-started/debugging-with-visual-studio-2017.md)</ept></source>
+          <target state="translated"><bpt id="p1">[</bpt>Debug di un'applicazione C# denominata Hello World<ept id="p1">](../../csharp/getting-started/debugging-with-visual-studio-2017.md)</ept></target>       </trans-unit>
+        <trans-unit id="109" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[</bpt>Publishing your C# Hello World application<ept id="p1">](../../csharp/getting-started/publishing-with-visual-studio-2017.md)</ept></source>
+          <target state="translated"><bpt id="p1">[</bpt>Pubblicazione di un'applicazione C# denominata Hello World<ept id="p1">](../../csharp/getting-started/publishing-with-visual-studio-2017.md)</ept></target>       </trans-unit>
+        <trans-unit id="110" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[</bpt>Building a C# class library<ept id="p1">](../../csharp/getting-started/library-with-visual-studio-2017.md)</ept></source>
+          <target state="translated"><bpt id="p1">[</bpt>Compilazione di una libreria di classi C#<ept id="p1">](../../csharp/getting-started/library-with-visual-studio-2017.md)</ept></target>       </trans-unit>
+        <trans-unit id="111" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[</bpt>Testing a C# class library<ept id="p1">](../../csharp/getting-started/testing-library-with-visual-studio.md)</ept></source>
+          <target state="translated"><bpt id="p1">[</bpt>Test di una libreria di classi C#<ept id="p1">](../../csharp/getting-started/testing-library-with-visual-studio.md)</ept></target>       </trans-unit>
+        <trans-unit id="112" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[</bpt>Consuming a C# class library with .NET Core<ept id="p1">](../../csharp/getting-started/consuming-library-with-visual-studio-2017.md)</ept></source>
+          <target state="translated"><bpt id="p1">[</bpt>Uso di una libreria di classi C# con .NET Core<ept id="p1">](../../csharp/getting-started/consuming-library-with-visual-studio-2017.md)</ept></target>       </trans-unit>
+        <trans-unit id="113" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[</bpt>Building a complete C# .NET Core solution on Windows<ept id="p1">](using-on-windows-full-solution.md)</ept></source>
+          <target state="translated"><bpt id="p1">[</bpt>Compilare una soluzione completa C# con .NET in Windows<ept id="p1">](using-on-windows-full-solution.md)</ept></target>       </trans-unit>
+        <trans-unit id="114" translate="yes" xml:space="preserve">
+          <source>Building applications with Visual Studio Code</source>
+          <target state="translated">Compilazione di applicazioni con codice di Visual Studio</target>       </trans-unit>
+        <trans-unit id="115" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[</bpt>Getting Started with C# using Visual Studio Code<ept id="p1">](../../csharp/getting-started/with-visual-studio-code.md)</ept></source>
+          <target state="translated"><bpt id="p1">[</bpt>Introduzione a C# usando codice di Visual Studio Code<ept id="p1">](../../csharp/getting-started/with-visual-studio-code.md)</ept></target>       </trans-unit>
+        <trans-unit id="116" translate="yes" xml:space="preserve">
           <source><bpt id="p1">[</bpt>Getting started with .NET Core on macOS<ept id="p1">](using-on-macos.md)</ept></source>
           <target state="translated"><bpt id="p1">[</bpt>Introduzione a .NET Core su macOS<ept id="p1">](using-on-macos.md)</ept></target>       </trans-unit>
-        <trans-unit id="108" translate="yes" xml:space="preserve">
-          <source><bpt id="p1">[</bpt>Getting started with .NET Core on Windows/Linux/macOS using the command line<ept id="p1">](using-with-xplat-cli.md)</ept></source>
-          <target state="translated"><bpt id="p1">[</bpt>Introduzione all'uso di .NET Core su Windows/Linux/macOS dalla riga di comando<ept id="p1">](using-with-xplat-cli.md)</ept></target>       </trans-unit>
-        <trans-unit id="109" translate="yes" xml:space="preserve">
+        <trans-unit id="117" translate="yes" xml:space="preserve">
+          <source>Building applications with the .NET Core CLI tools</source>
+          <target state="translated">Compilazione di applicazioni con gli strumenti dell'interfaccia CLI di .NET Core</target>       </trans-unit>
+        <trans-unit id="118" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[</bpt>Getting started with .NET Core on Windows/Linux/macOS using the .NET Core CLI tools<ept id="p1">](using-with-xplat-cli.md)</ept></source>
+          <target state="translated"><bpt id="p1">[</bpt>Introduzione all'uso di .NET Core in Windows/Linux/macOS con gli strumenti dell'interfaccia CLI di .NET Core<ept id="p1">](using-with-xplat-cli.md)</ept></target>       </trans-unit>
+        <trans-unit id="119" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[</bpt>Organizing and testing projects with the .NET Core CLI tools)<ept id="p1">](testing-with-cli.md)</ept></source>
+          <target state="translated"><bpt id="p1">[</bpt>Organizzazione e test dei progetti con gli strumenti dell'interfaccia CLI di .NET Core<ept id="p1">](testing-with-cli.md)</ept></target>       </trans-unit>
+        <trans-unit id="120" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[</bpt>Getting started with F#<ept id="p1">](../../fsharp/tutorials/getting-started/getting-started-command-line.md)</ept></source>
+          <target state="translated"><bpt id="p1">[</bpt>Introduzione a F#<ept id="p1">](../../fsharp/tutorials/getting-started/getting-started-command-line.md)</ept></target>       </trans-unit>
+        <trans-unit id="121" translate="yes" xml:space="preserve">
+          <source>Other</source>
+          <target state="translated">Altro</target>       </trans-unit>
+        <trans-unit id="122" translate="yes" xml:space="preserve">
           <source><bpt id="p1">[</bpt>Developing Libraries with Cross Platform Tools<ept id="p1">](libraries.md)</ept></source>
           <target state="translated"><bpt id="p1">[</bpt>Sviluppo di librerie con strumenti multipiattaforma<ept id="p1">](libraries.md)</ept></target>       </trans-unit>
-        <trans-unit id="110" translate="yes" xml:space="preserve">
+        <trans-unit id="123" translate="yes" xml:space="preserve">
           <source><bpt id="p1">[</bpt>How to Manage Package Dependency Versions for .NET Core 1.0<ept id="p1">](managing-package-dependency-versions.md)</ept></source>
           <target state="translated"><bpt id="p1">[</bpt>Come gestire le versioni delle dipendenze di pacchetto per .NET Core 1.0<ept id="p1">](managing-package-dependency-versions.md)</ept></target>       </trans-unit>
-        <trans-unit id="111" translate="yes" xml:space="preserve">
-          <source><bpt id="p1">[</bpt>Using MSBuild to build .NET Core projects<ept id="p1">](target-dotnetcore-with-msbuild.md)</ept></source>
-          <target state="translated"><bpt id="p1">[</bpt>Uso di MSBuild per creare progetti .NET Core<ept id="p1">](target-dotnetcore-with-msbuild.md)</ept></target>       </trans-unit>
-        <trans-unit id="112" translate="yes" xml:space="preserve">
-          <source>For tutorials about developing ASP.NET Core web applications, we suggest you head over to <bpt id="p1">[</bpt>ASP.NET Core documentation<ept id="p1">](https://docs.microsoft.com/aspnet/core/)</ept>.</source>
-          <target state="translated">Per esercitazioni sullo sviluppo di applicazioni Web ASP.NET Core, si consiglia di consultare la <bpt id="p1">[</bpt>documentazione di ASP.NET Core<ept id="p1">](https://docs.microsoft.com/aspnet/core/)</ept>.</target>       </trans-unit>
+        <trans-unit id="124" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[</bpt>Hosting .NET Core from native code<ept id="p1">](netcore-hosting.md)</ept></source>
+          <target state="translated"><bpt id="p1">[</bpt>Hosting di .NET Core da un codice nativo<ept id="p1">](netcore-hosting.md)</ept></target>       </trans-unit>
+        <trans-unit id="125" translate="yes" xml:space="preserve">
+          <source>For tutorials about developing ASP.NET Core web applications, we suggest you head over to the <bpt id="p1">[</bpt>ASP.NET Core documentation<ept id="p1">](https://docs.microsoft.com/aspnet/core/)</ept>.</source>
+          <target state="translated">Per esercitazioni sullo sviluppo di applicazioni Web ASP.NET Core, vedere la <bpt id="p1">[</bpt>documentazione di ASP.NET Core<ept id="p1">](https://docs.microsoft.com/aspnet/core/)</ept>.</target>       </trans-unit>
       </group>
     </body>
   </file>
